--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mobilesystemeundcloudteamjapan">
+    
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission-sdk-23>
+    <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission-sdk-23>
 
     <application
         android:allowBackup="true"
