--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission-sdk-23>
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission-sdk-23>
+    <uses-permission-sdk-23 android:name="android.permission.INTERNET"></uses-permission-sdk-23>
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name="MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
-
 </manifest>
